updated portfolio and fixed overflow-x bug

--- a/src/App.css
+++ b/src/App.css
@@ -331,6 +331,7 @@ h3 {
   justify-content: center;
   align-items: flex-start;
   gap: 106.667px;
+  overflow-x: hidden;
 }
 .skills--section--heading {
   color: var(--heading-color);
@@ -550,6 +551,11 @@ h3 {
   padding: 5px 10px;
   border-radius: 5px;
   font-size: 14px;
+}
+
+.portfolio--section--card--content--icons {
+  display: flex;
+  gap: 16px;
 }
 
 /* Portfolio Ends */
